fix(achievement): center align texts

--- a/components/ui/Achievement/Achievement.module.css
+++ b/components/ui/Achievement/Achievement.module.css
@@ -24,6 +24,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  text-align: center; /* center-align text in info area */
 }
 
 .title {
